--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,41 +1,38 @@
 name: Playwright Tests
 
 on:
-push:
-branches: [main, master]
-pull_request:
-branches: [main, master]
+  push:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
 
 jobs:
-test:
-runs-on: ubuntu-latest
-timeout-minutes: 60
+  test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
 
-steps:
-# Step 1: Checkout the repository
-- uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-# Step 2: Setup Node.js environment
-- uses: actions/setup-node@v4
-with:
-node-version: 'lts/*'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+        node-version: 'lts/*'
 
-# Step 3: Install dependencies
-name: Install dependencies
-run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-# Step 4: Install Playwright browsers and dependencies
-name: Install Playwright Browsers
-run: npx playwright install --with-deps
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
-# Step 5: Run Playwright tests
-name: Run Playwright Tests
-run: npx playwright test
 
-# Step 6: Upload HTML report as an artifact
-uses: actions/upload-artifact@v4
-if: ${{ !cancelled() }}
-with:
-name: playwright-report
-path: playwright-report/
-retention-days: 30
+      - name: Run Playwright Tests
+        run: npx playwright test
+
+        uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
