--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Run Playwright Tests
         run: npx playwright test
 
+      - name: Upload Playwright Report
+        if: always()
         uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 30
