fixing serve build

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,14 +24,13 @@ jobs:
       - name: Build application
         run: npm run build
 
-      - name: Install dependencies with Npm
-        run: npm install -g serve
-      
-      - name: Serve the build
-        run: serve -s build -l 3000
-
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+      
+      # - name: Serve the build
+      #   run: | 
+      #     serve -s build -l 3000 &
+      #     npx wait-on http://localhost:3000 --timeout 10000
 
       - name: Run Playwright Tests
         run: npx playwright test
