--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Verify Playwright installation
+        run: |
+          ls -la node_modules/@playwright
+          npm list @playwright/test
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
