--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,6 +31,9 @@ jobs:
 
       - name: Build application
         run: npm run build
+
+      - name: Install serve and wait-on
+        run: npm install -g serve wait-on
       
       - name: Serve the build
         run: | 
