--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [main, master]
 
+env:
+  PLAYWRIGHT_BASE_URL: http://localhost:3000
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -40,11 +43,16 @@ jobs:
           serve -s build -l 3000 &
           npx wait-on http://localhost:3000 --timeout 60000
 
+      - name: Debug Env
+        run: |
+          echo "Current Environment Variables:"
+          echo "Base URL: ${{ env.PLAYWRIGHT_BASE_URL }}"
+
       - name: Run Playwright Tests
         run: npx playwright test
 
       - name: Upload Playwright Report
-        if: always()
+        if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
