--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
         "rootDir": "./src",
         "noEmit": true // Prevent TypeScript from emitting files
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "playwright.config.ts"],
     "exclude": ["node_modules", "src/tests", "e2e", "playwright"]
 }
