create post / get posts

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@
 /coverage
 /playwright-report
 
+# Playwright
+node_modules/
+/test-results/
+/blob-report/
+/playwright/.cache/
+
 # production
 /build
 
