--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ node_modules/
 /playwright/.cache/
 /coverage/
 
+# Playwright
+node_modules/
+/test-results/
+/blob-report/
+/playwright/.cache/
+
 # production
 /build
 
